--- a/infrastructure/adapter-rest/src/main/resources/application.yml
+++ b/infrastructure/adapter-rest/src/main/resources/application.yml
@@ -9,7 +9,7 @@ project:
   quarkus:  
     log:          
       category:
-        "dxc.microservice.quarkus":
+        "com.microservice.quarkus":
           level: DEBUG
       file:
         enable: true
