--- a/infrastructure/adapter-postgresql/pom.xml
+++ b/infrastructure/adapter-postgresql/pom.xml
@@ -5,7 +5,7 @@
     <packaging>jar</packaging>
 
     <parent>
-        <groupId>dxc.microservice.quarkus</groupId>
+        <groupId>com.microservice.quarkus</groupId>
         <artifactId>quarkus-infrastructure</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
@@ -16,7 +16,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>dxc.microservice.quarkus</groupId>
+            <groupId>com.microservice.quarkus</groupId>
             <artifactId>application</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
