--- a/infrastructure/pom.xml
+++ b/infrastructure/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
     
     <parent>
-        <groupId>dxc.microservice.quarkus</groupId>
+        <groupId>com.microservice.quarkus</groupId>
         <artifactId>quarkus-hexagonal</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>dxc.microservice.quarkus</groupId>
+    <groupId>com.microservice.quarkus</groupId>
     <artifactId>quarkus-infrastructure</artifactId>
     <packaging>pom</packaging>
 
